# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG    = fixed a bug that was (or could have been) crashing
#
#

Mar 30, 2008
    Added subscript support to PixelArray and PixelArray.make_surface()
      to create a new surface from the PixelArray view.
    Fixed mask namespace pollution and docs.

release_1_8_0release
Mar 18, 2008
    Updated credits.
    Mac OSX binary now has movie module working.
    1.8.0rc5

Mar 16, 2008
    the play functions of mixer.Channel and mixer.Sound both now take keyword
      arguments, and accept a fade_ms argument that makes the sound fade in
    
Mar 9, 2008
    pygame.display.set_mode() will now respect the screen resolution settings
      for the width or height set to 0 as supported by SDL >= 1.2.10. 
      Thanks Lorenz Quack!

Mar 5, 2008
    [BUG] Stopped releasing GIL on png, and jpeg saving functions because
        they do not seem to be thread safe.

    [BUG] A work around for 8 bit samples being stereo reversed with SDL_mixer.
        Also check the return value of Mix_SetPanning, and raise an 
        error on volume errors.

    [BUG] Changed default chunk size for pygame.mixer to 1024*3.  Which is 
        the magic number which stops scratchy sounds on most systems.  
        However it does make sounds a bit laggier... it's best provided as 
        a config item for users.

    Updated pygame.display.update() to release the GIL whilst doing things,
        so other threads can do things whilst it's updating the screen.

    Some comments to help Mac OSX people installing, and compiling pygame.
        About bdist_mpkg in setup, and also fixed an exception message 
        to be nicer about requiring pyobjc.

Mar 3, 2008
    [BUG] Fixed up pygame.mask.from_surface, got color key, and perpixel alpha 
        modes reversed.

    Also added better test to the mask test.  